# touchup

./: Cargo.toml  LICENSE  README.md  about.hbs  about.toml  ffmpeg_ref.txt  index.html  privacyPolicy  privacyPolicy.html  rust-toolchain.toml  style.css
.github/assets/: LICENSE_CLEARUP  LINUX_LICENSE_CLEARUP  WIN_LICENSE_CLEARUP
.github/workflows/: build.yaml  check.yaml  release.yaml
data/: README.md  update.json
data/youtube/: vinfo1.json
embedded/: yt_cred.json
src/: editor.rs  export.rs  logging.rs  main.rs  select.rs  task.rs  updater.rs  util.rs  youtube.rs
src/player/: impl.rs  mod.rs  tex.rs
