[package]
name = "touchup"
version = "0.1.0"
edition = "2021"
authors = ["purple-ic"]
license = "MIT"
license-file = "LICENSE"
homepage = "https://github.com/purple-ic/touchup"
repository = "https://github.com/purple-ic/touchup"
description = "A program to quickly edit video clips"

[dependencies]
thiserror = "1.0.63"
# yup_oauth2 uses anyhow in v11.0.0
# newer versions use thiserror
anyhow = { version = "1.0.38", optional = true }
time = { version = "0.3.36", default-features = false, features = ["std"] }
backtrace = "0.3.73"
log = "0.4.22"
simple_logger = { version = "5.0.0", features = ["threads"] }
puffin = "0.19.1"
puffin_egui = "0.29.0"
keyring = { version = "3.0.5", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
], optional = true }
# yup_oauth2 uses async_trait
async-trait = { version = "0.1.18", optional = true }

# make sure the egui, eframe and egui_extras versions are the same!
egui = { version = "0.28.1", features = ["persistence", "serde"] }
eframe = { version = "0.28.1", features = ["persistence", "serde"] }
egui_extras = { version = "0.28.1", default-features = false, features = [
  "svg",
  "serde",
] }

ffmpeg-next = { version = "7.0.2", default-features = false, features = [
  "codec",
  "format",
  "software-resampling",
  "software-scaling",
] }
rodio = { version = "0.19.0", default-features = false }
futures = { version = "0.3.30", optional = true }
futures-util = { version = "0.3.30", optional = true }

# file dialog library
rfd = "0.14.1"
# recycling bin/trash bin/whatever library
trash = { version = "5.0.0" }
open = "5.3.0"
# library that gives us shorthands for OS-specific folders (we specifically use it for fiding the video folder)
dirs = "5.0.1"
replace_with = "0.1.7"

# yup_oauth2 is an oauth2 library for google apis
yup-oauth2 = { version = "11.0.0", optional = true }
reqwest = { version = "0.12.5", optional = true, default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
  "macos-system-configuration",
] }

serde_json = { version = "1.0.120", optional = true }
tokio = { version = "1.38.1", features = [
  "rt",
], default-features = false, optional = true }
tokio-util = { version = "0.7.11", default-features = false, optional = true }
serde = { version = "1.0.203", features = ["derive"] }

tempfile = { version = "3.10.1", optional = true }
zip = { version = "2.1.5", optional = true }
self-replace = { version = "1.4.0", optional = true }

[dependencies.parking_lot]
# absolutely make sure this matches egui's version of parking_lot (https://github.com/emilk/egui/blob/master/Cargo.toml)
version = "0.12"
features = ["send_guard"]

# we want to dev profile to be more optimized than usual since the video decoding is really expensive and gets suuuper slow otherwise
[profile.dev]
opt-level = 2

[features]
default = ["youtube"]
# enables youtube uploading
#   if disabled, the upload to youtube button won't appear at all.
#   depends on the `async` feature
youtube = [
  "async",
  "dep:yup-oauth2",
  "dep:serde_json",
  "tokio/fs",
  "reqwest",
  "reqwest/stream",
  "reqwest/json",
  "reqwest/multipart",
  "tokio-util/io",
  "dep:keyring",
  "dep:anyhow",
  "dep:async-trait",
]
# enables the async runtime
#   the async runtime is a single thread separate from the UI thread
#   so all async tasks run on a single thread. this is fine since
#   we only use async for uploads
async = ["dep:tokio", "dep:futures-util", "dep:futures"]

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(print_fps)'] }
